$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-18 (opened July 30, 2012)

	* envift: got labels() method that returns the labels used in
	plot().
	
Version 2.1-17 (closed July 30, 2012)

	* New version opened with the CRAN release of vegan 2.0-4 on June
	18, 2012.

	* biplot.rda: bug in specification of `type` argument if not supplied
	by the user; should have been a vector of length == 2.

	* adipart, hiersimu, multipart: default and formula methods of
	these functions were identical (also for the calculations) except
	in interpreting the input. Now the formula method only interprets
	the formula and calls the default method for the actual
	calculations without replicating its code. The "call" attribute of
	these functions now returns the generic function name without
	".default", ".formula" suffix. 

	Functions use now print.oecosimu() for displaying results and
	their specific print.*() functions were deleted. This involved
	changes in attributes: the printed attributes are now in
	object$oecosimu$simulated instead of object.

	* oecosimu: returns "call" attribute similarly as adipart(),
	hiersimu() and multipart(). The print.oecosimu() output changed,
	and shows the call. print.oecosimu() is able to display adipart(),
	hiersimu() and multipart() results, but does not show all
	informations that those dedicated functions showed about options. 

	* Formula methods for adipart/multipart/hiersimu functions
	use a new internal (hierParseFormula) to interpret the formula.

Version 2.1-16 (closed June 18, 2012)

	* envfit: plot() gained new argument 'bg' that triggers labelling
	with ordilabel() using the colour given in 'bg' as the background.

	* simper: added parallel processing for permutation tests in
	accordance with other vegan functions and with similar user
	interface. The code was developed by Eduard Szöcs in
	http://github.com.

	* predict.cca: number of rows must match in the original data and